Name:                stxt
Version:             0.1
Synopsis:            structed text
Description:         structed text
License:             GPL
Author:              fhopecc
Maintainer:          fhopecc <fhopecc@gmail.com>
Build-Depends:       base
Build-type:          Simple
Cabal-Version:       >=1.2.3
Library
  Build-Depends: base >= 4.3.1.0 && < 5,
                 parsec
